--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-slideshow-image": "^4.1.1",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
+    "swiper": "^8.4.5",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
