--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "6",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
-    "react-slideshow-image": "^4.1.1",
+    "react-ts-typewriter": "^0.1.8-b",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
