--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.1",
+    "msw": "^0.49.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "6",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
-    "react-slideshow-image": "^4.1.1",
+    "react-ts-typewriter": "^0.1.8-b",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
+    "swiper": "^8.4.5",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -34,6 +36,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!axios/.*)"
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +61,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-slick": "^0.23.10"
+    "@types/react-slick": "^0.23.10",
+    "ts-jest": "^29.0.3"
   }
 }
